# krkrz_blend2d

./: .gitignore  Blend2D.cpp  Blend2D.hpp  CMakeLists.txt  Makefile  main.cpp  manual.tjs  readme.md
data/: Blend2D.tjs  startup.tjs
src/: Blend2D.cpp  Blend2D.hpp  main.cpp  nuklear.cpp  utils.cpp
